# cedict-parser

./: Cargo.toml  README.md
data/: dict.latex  dict.tex
sql/: db.sql
src/: consts.rs  database.rs  downloader.rs  main.rs  parser.rs  templatebuilder.rs  utils.rs
templates/: latex.tera
