[package]
name = "cedict-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.9.7"
flate2 = "1.0.30"
regex = "1.10.5"
lazy_static = "1.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tera = "1.20.0"
rusqlite = "0.31.0"